--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "tsc"
   },
   "author": "shuangzi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/winnerlabs/match3-solana-client"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.12",
